fixed assignment show page styles for students
Notes:
* Fixed gray labels on top of assignment and quiz pages from
  student's perspective
* Made comments box bigger in the assignment submission area so
  the "Comments..." placeholder is not cut off
* Placed the 'input-file' class on the file upload field as it is
  in the bootstrap styleguide, but not sure if this will fix the
  file upload button since the file upload field is native to the
  OS

fixes CNVS-4481

Reviewed-on: https://gerrit.instructure.com/18540
Tested-by: Jenkins <jenkins@instructure.com>
QA-Review: Myller de Araujo <myller@instructure.com>

--- a/app/stylesheets/assignments.sass
+++ b/app/stylesheets/assignments.sass
@@ -6,8 +6,8 @@
 #submit_assignment
   .submission_comment_textarea
     width: 300px
-    height: 14px
-    padding: 3px
+    height: 20px
+    padding: 4px 6px
     &.focus_or_content
       width: 100%
       height: 72px
@@ -64,12 +64,12 @@
     border-bottom: 1px solid #BBB
     font-size: 1.1em
     padding: 0.5em 0.25em
-    margin-bottom: 0 0 1em 0
+    margin: 0 0 1em 0
 
     li
-      float: left
+      display: inline-block
 
-    .label
+    .title
       font-weight: bold
       padding-right: 0.5em
 
